--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"lodash": "^4.17.21",
 		"next": "12.1.0",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-collapsed": "^3.3.0",
+		"react-dom": "17.0.2",
+		"react-fast-marquee": "^1.3.1",
+		"react-marquee-slider": "^1.1.5",
+		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.22",
