--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"react-dom": "17.0.2",
 		"react-fast-marquee": "^1.3.1",
 		"react-marquee-slider": "^1.1.5",
-		"styled-components": "^5.3.5"
+		"react-player": "^2.10.0",
+		"styled-components": "^5.3.5",
+		"video-react": "^0.15.0"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.22",
