--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
 		"react-dom": "17.0.2",
 		"react-fast-marquee": "^1.3.1",
 		"react-marquee-slider": "^1.1.5",
+		"react-modal": "^3.14.4",
 		"react-player": "^2.10.0",
+		"react-portal": "^4.2.2",
+		"react-responsive-modal": "^6.2.0",
 		"styled-components": "^5.3.5",
+		"sweetalert2": "^11.4.8",
 		"video-react": "^0.15.0"
 	},
 	"devDependencies": {
